--- a/source/stylus/initial/myself.styl
+++ b/source/stylus/initial/myself.styl
@@ -7,7 +7,8 @@
     width: 100vw
     height: 100vh
     -webkit-backface-visibility: hidden
-    transform: matrix3d()
+    -webkit-transform: translate3d(0, 0, 0)
+    webkit-transform-style: preserve-3d
     transition: transform 0.7s ease
   }
 
@@ -33,7 +34,6 @@
     height: 50px
     top: 100px
     right: 32px
-    transform: matrix3d()
   }
 
   #indicator:after {
@@ -56,6 +56,9 @@
       background-position: center
       width: 100vw
       height: 100vh
+      -webkit-backface-visibility: hidden
+      -webkit-transform: translate3d(0, 0, 0)
+      webkit-transform-style: preserve-3d
     }
 
     div {
@@ -167,10 +170,9 @@
     right: 11px
     width: 7px
     height: 11px
-    transform: matrix3d()
   }
 }
 
-#myself::-webkit-scrollbar {
+#myself:-webkit-scrollbar {
   width: 0
 }
